src/_assets/sass/_global.sass
*, *:before, *:after
	box-sizing: border-box

*::-moz-selection
	background: $c-light
	color: $c-dark

*::selection
	background: $c-light
	color: $c-dark

html
	scroll-behavior: smooth
	background: $c-dark

body
	font-size: 16px
	background: $c-dark
	color: $c-grey
	margin-top: 0rem
	+font-firs

.fk-uppercase
	font-variant: traditional

h1
	font-size: 1.625rem
	font-weight: 600
	line-height: 1em
	color: $c-white
	em
		color: $c-grey
	+small
		font-size: 2rem
	+medium
		max-width: 100%
		font-size: 2.6rem
	+xlarge
		font-size: 3.2rem

h2
	margin-top: .5rem
	font-weight: 500
	text-transform: uppercase
	padding-bottom: 2rem
	+small
		padding-bottom: 3rem

h3
	color: $c-light
	font-size: 1.325rem
	margin-bottom: .25rem
	+small
		font-size: 1.75rem
		margin-bottom: .5rem

h4
	color: $c-light
	font-size: 1rem

a 
	text-decoration: none
	color: $c-white
	+easeall

	&:hover
		color: $c-pink

.sn-wrap
	position: relative
	z-index: 100
	max-width: 24rem
	margin: auto
	padding: 0 1rem
	// box-shadow: 1px 0 0 0 rgba($c-grey, .1), -1px 0 0 0 rgba($c-grey, .1)
	padding: 0 0 4rem
	+small
		padding: 0 2rem 4rem
		max-width: 50rem
	+large
		padding: 10rem 0 0 
		max-width: 56rem
	+xlarge
		max-width: 75rem
		
.sn-logo
	text-align: center
	padding: 2.5rem
	margin: 0 auto
	float: none
	transform: scale(1.1)
	max-width: max-content
	+easeall
	&:hover
		transform: scale(1.2) rotate(-2deg)
		+easeall
	+large
		transform: scale(1)
		padding: 0
		float: left
		margin-left: -96px
		margin-top: -18px

.sn-course-meta
	display: grid
	grid-template-columns: 1fr
	align-items: self-start
	margin-top: 3rem
	grid-column-gap: 3rem
	+small
		grid-template-columns: 1fr 1fr
	+large
		grid-column-gap: 0
		grid-template-columns: 1fr 1fr
		margin-top: 5rem
	a
		text-align: center
		justify-self: self-start
		text-decoration: none

.sn-cta-group
	display: grid
	grid-template-columns: 1fr

	p, a
		text-align: center
		position: relative
	p
		padding: 1rem 0
	+small
		grid-template-columns: 16rem 1fr
	+medium
		grid-template-columns: 22rem 1fr

a.sn-cta-primary
	color: $c-dark 
	background: $c-light
	font-size: 1rem
	display: block
	padding: 1.25rem 0
	border-radius: 6px
	width: 100%
	color: $c-dark
	text-align: center
	margin: auto
	text-shadow: none
	animation: none
	position: relative
	+easeall
	&:hover
		background: $c-white
		transform: translateY(-2px)
		+easeall
	+large
		// max-width: 20rem
		display: inline-block

.sn-instructor
	margin-top: 3rem
	text-align: center
	+small
		background: none
		padding: 0
		text-align: left
		margin-top: .25rem
		margin-left: 1.5rem
	&:hover img
		transform: scale(1.05)
	img
		border-radius: 50%
		width: 3rem
		+easeall
		+small
			float: left
			margin-right: .75rem
	p
		margin-top: 1rem

.sn-modules
	margin-top: 5rem
	+small
		margin-top: 8rem

.sn-module-group
	display: grid
	grid-template-columns: 1fr
	+small
		grid-template-columns: 1fr 1fr
		grid-row-gap: 0
		grid-column-gap: 4rem
	+large
		grid-template-columns: 1fr 1fr 1fr
	+xlarge
		grid-template-columns: 1fr 1fr 1fr 1fr

.sn-module
	padding: 1rem 0
	cursor: default
	display: grid
	grid-template-columns: 4.5rem 1fr
	align-content: start
	+easeslow

	.icon-bg
		transform-origin: center
		+easeslow

	&:hover
		.icon-bg
			opacity: .2
			+easeall
		ol
			+small
				color: $c-light
				+easeall

		// remove hover from expanded modules
		// .sn-lessons--showing
		//   ol
		//     +small
		//       color: inherit !important

	+small
		grid-template-columns: 1fr
		padding: 2rem 0

	h3
		padding-top: 1rem
		+small
			padding-top: 0

.sn-module-content
	// padding-left: 1rem

.sn-module:hover .sn-module-icon
	+easeall
	+small
		transform: scale(1.1)

.sn-module-icon
	width: 3.5rem
	height: 3.5rem
	float: left
	margin-left: 0
	margin-right: 1.25rem
	transform: scale(.9)
	+easeslow

	+small
		width: 4.5rem
		height: 4.5rem
		transform: scale(1)
		float: none
		margin-right: 0
		margin-left: -.5rem
		margin-bottom: 1.5rem

	svg
		width: 100%

.sn-lessons
	position: relative
	height: 7.5rem
	overflow: hidden
	padding: 0 0 0 1rem
	+easeslow

	ol
		font-size: 1rem
		margin-top: .5rem
		padding-left: .875rem
		font-variant-numeric: tabular-nums
		+small
			margin-top: 1rem
			+easeall

		li
			line-height: 150%
			padding-left: .25rem
			list-style: decimal-leading-zero
			+small
				line-height: 150%

	&:before
		position: absolute
		content: ""
		display: block
		width: 100%
		height: 100%
		top: 0
		left: 0
		background: linear-gradient(0deg, $c-dark, rgba($c-dark, 0))
		+easeall

.sn-lessons--showing
	height: auto !important
	+easeslow
	&:before
		opacity: 0 !important
		+easeslow

.sn-beta
	padding-top: 2rem
	margin-top: 4rem
	+small
		padding-top: 3rem
		margin-top: 4rem

.sn-callout 
	display: grid
	grid-template-columns: 1fr
	font-size: 1.325rem
	line-height: 1.25em
	margin-bottom: 2rem
	grid-row-gap: 2rem
	+large
		grid-template-columns: 1fr 1fr
		grid-column-gap: 4rem
		margin-bottom: 4rem
		font-size: 1.5rem
	p
		color: $c-light
		+xlarge
			max-width: 28rem
	ul
		font-size: 1rem
		margin-top: 0
		li 
			+easeall
			cursor: default
			list-style: none
			margin: 0
			span
				// color: $c-light
			div
				color: $c-light
				font-weight: 800
				margin-right: .5rem
				display: inline-block
				// +easeall
				transition: transform cubic-bezier(0.68, -0.55, 0.265, 1.55) .25s
			mark
				font-feature-settings: "smcp" 1
				color: $c-grey
				background: none

			&:hover
				color: $c-light
				div
					transform: scale(1.5)
					// color: $c-pink

.sn-foot
	display: grid
	grid-template-columns: 1fr
	margin-top: 6rem
	grid-row-gap: 6rem
	text-align: center
	align-items: baseline
	padding: 0 0 4rem

	+small
		text-align: left
		margin-top: 10rem
		grid-template-columns: 1.125fr 1fr
		grid-column-gap: 5rem

		+large
			grid-template-columns: 1fr 1fr
			grid-column-gap: 4rem

	.sn-legal
		justify-self: center
		+small
			justify-self: start

			h4
				color: $c-grey

	h4
		div
			content: "↗"
			display: inline-block
			transform: translate(0,0)
			+easeall
		&:hover
			+easeall
			div
				+easeall
				color: $c-light
				transform: translate(2px,-2px)

.sn-countdown
	font-variant-numeric: tabular-nums
	color: $c-light

.sn-body
	max-width: 50rem
	margin: auto

	h1
		padding: 4rem 0
		position: relative
		// margin-left: 3rem
		+large
			padding: 0 0 4rem

		a
			color: $c-pink
			transform: translateX(-44px)
			position: absolute
			+easeall
			&:hover
				transform: translateX(-52px)
				+easeall
		
	h2 
		padding: 2rem 0
		color: $c-light
		
	h3
		padding: 0 .5rem 0 0
		margin: 0
		float: left
		color: $c-light
	p, h3
		font-size: 1.25rem
		font-weight: 400
		line-height: 1.35
	p
		padding-bottom: 2rem
		&:first-of-type
			font-size: 1.25rem
			color: $c-light
			+small
				font-size: 1.5rem
	

	

